@@ -1,4 +1,8 @@
+2007-07-30  Don Scorgie  <dscorgie@svn.gnome.org>
 
+	* src/Makefile.am: 
+	Disable test programs for now
+	
 == REWORK CHANGES ==
 
 2007-07-30  Don Scorgie  <dscorgie@svn.gnome.org>
